[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rgevolve.smeft.warsaw_up"
authors = [
    {name = "Aleks Smolkovič", email = "aleks.smolkovic@ijs.si"},
    {name = "Peter Stangl", email = "peter.stangl@cern.ch"},
]
description = "Package providing Renormalization Group Evolution Matrices for the SMEFT in the \"Warsaw up\" basis"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "rgevolve-core"
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src/"]
include = ["rgevolve.smeft.warsaw_up"]

[tool.setuptools_scm]
version_file = "src/rgevolve/smeft/warsaw_up/_version.py"

[tool.setuptools.package-data]
"rgevolve.smeft.warsaw_up" = ["data.h5"]
