[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rgevolve.smeft.warsaw_up"
authors = [
    {name = "Aleks Smolkovič", email = "aleks.smolkovic@ijs.si"},
    {name = "Peter Stangl", email = "peter.stangl@cern.ch"},
]
description = 'Package providing Renormalization Group Evolution Matrices for the SMEFT in the "Warsaw up" basis'
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
keywords = [
    "renormalization group",
    "RGE",
    "Wilson coefficients",
    "EFT",
    "SMEFT",
    "WET",
    "particle physics",
    "wcxf",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "rgevolve-core"
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/rgevolve/rgevolve.smeft.warsaw_up"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["rgevolve.smeft.warsaw_up"]

[tool.setuptools_scm]
version_file = "src/rgevolve/smeft/warsaw_up/_version.py"

[tool.setuptools.package-data]
"rgevolve.smeft.warsaw_up" = ["data.h5"]
